# write-helper

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  修改记录.md  需求文档.md
scripts/: add-common-typos.py  build-typo-dict.py  merge-batch2.py  merge-typo-data.py  restore-entries.py
src/: App.vue  api.ts  editorHelper.ts  formatDoc.ts  proofreadData.ts  store.ts  tiptapHelper.ts  useCtxMenu.ts  useKeyboardShortcuts.ts  wysiwygHelper.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  models.rs  types.rs
src-tauri/src/ai/: adapter.rs  crypto.rs  key_store.rs  mod.rs  openai_compat.rs  registry.rs  skills.rs  types.rs
src-tauri/src/commands/: config.rs  files.rs  mod.rs  project.rs  recent.rs
src/ai/: AIPanel.vue
src/api/: ai.ts  config.ts  export.ts  files.ts  index.ts  project.ts  search.ts
src/article-templates/: htmlBlock.ts  index.ts  registry.ts  types.ts
src/components/: ArticleEditor.vue  ArticleLeftPanel.vue  ArticleMetaPanel.vue  BgSettingsPanel.vue  BottomBar.vue  CharacterPanel.vue  ContentBlockEditor.vue  CreateProjectModal.vue  CustomRuleDialog.vue  CustomTemplateDialog.vue  EditorArea.vue  FileTree.vue  FindReplace.vue  FolderPanel.vue  FontSettingsPanel.vue  GlobalDialog.vue  ImageReplacePanel.vue  ImageUploadPanel.vue  ImportBookModal.vue  LeftPanel.vue  MergeExportPanel.vue  OpenProjectModal.vue  OutlinePanel.vue  PromptDialog.vue  RichTextEditor.vue  RightPanel.vue  SearchPanel.vue  SensitiveWordDialog.vue  SettingsPanel.vue  SidePanel.vue  (+3 more)
(+58 files in other folders)
