[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dirs = "6"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
regex = "1"
zip = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["sync", "macros"] }
aes-gcm = "0.10"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
async-trait = "0.1"
rand = "0.8"
base64ct = { version = "1", features = ["alloc"] }
once_cell = "1"
futures-util = "0.3"
